jaml/examples/valid/maps.jaml
block_map:
  a: 1
  b: 2
  c: 3

brace_map: {a: 1, b: 2, c: 3}
brace_map_trailing: {a: 1, b: 2, c: 3,}
