jaml/examples/invalid/mixed_depth_map.jaml
mixed_depth_map:
  a: 1
    b: 2
